feat: Creation of validations for the client and book entities.